--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/zitrus?useSSL=false
+spring.datasource.url=jdbc:mysql://172.17.0.1:3306/zitrus
 spring.datasource.username=root
-# spring.datasource.password=
+spring.datasource.password=teste
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
